# simulus

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
simulus/: __main__.py  cli.py  seed.py
simulus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
simulus/core/: bayesian.py  causal_graph.py  chaos.py  montecarlo.py  parser.py
simulus/ml/: generate_data.py  ml_parser.py  train.py
simulus/renderer/: effects.py  explainer.py  rewind.py  tree.py
tests/: test_simulus.py
